Removed necessary code smells